LOG Updated to 0.32 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  bignum-0.25.tar.gz: b7c2e66f9fe40bb472a73e51244e84c0ebcf0427
 sources:
-  "bignum-0.25.tar.gz": b7c2e66f9fe40bb472a73e51244e84c0ebcf0427
+  bignum-0.32.tar.gz: 2c9e5def043d4f9cc39d0c131db93909a74239e9
