--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "bignum-0.25.tar.gz": b7c2e66f9fe40bb472a73e51244e84c0ebcf0427
+  bignum-0.51.tar.gz: 0da08cede1dc29e404faa9b438092f3938aa385e
